--- a/public/resume.css
+++ b/public/resume.css
@@ -5,6 +5,7 @@ body h1 {font-family: 'Noto Serif', serif;}
 body h2 {color:#007FA5;}
 body p {color:#4e4f51;}
 body li {color:#4e4f51;}
+
 .container {padding:50px;width:800px;margin:0 auto;background:white;-webkit-box-shadow: 0px 1px 3px 1px rgba(107,107,107,0.71);
 -moz-box-shadow: 0px 1px 3px 1px rgba(107,107,107,0.71);
 box-shadow: 0px 1px 3px 1px rgba(107,107,107,0.71);}
@@ -12,7 +13,7 @@ box-shadow: 0px 1px 3px 1px rgba(107,107,107,0.71);}
 
 
 
-#item1, #item2 {display:inline;}
+#item1, #item2 {display:inline;color:#737477;}
 #item2 {float:right;}
 
 .objective p {padding-left: 40px;width:740px;font-family: 'Lato', sans-serif;}
