--- a/public/Lab-Files/Lesson05/Challenges/Team_Day1/public/css/styles.css
+++ b/public/Lab-Files/Lesson05/Challenges/Team_Day1/public/css/styles.css
@@ -7,8 +7,16 @@ body {
     font-size:1.6rem;
 }
 
+
+.table-container {
+    max-width:80%;
+    margin: 0 auto;
+
+}
+
+
 table {
-    width:100%;
+    min-width:937px;
     border-collapse:collapse;
     text-transform:uppercase;
     table-layout:fixed;
@@ -18,6 +26,13 @@ tr td {
     padding: 6%;
     text-align:center;
     border:1px solid #e7e7e7;
+    font-size:1.8rem;
+    
+    
+}
+
+i {
+    margin-bottom: 20%;
 }
 
 .header, .header .empty {
@@ -60,4 +75,44 @@ td .green {
 
 td .blue{
     color:#1EAAF1;
+}   
+  .table-container {
+   max-width:80%;
+   overflow-y:scroll;
+   
+}
+    
+@media (min-width: 480px) {
+    .page::before {
+        content: "480px";
+        color: maroon;
+    }
+}
+
+@media (min-width: 620px) {
+    .page::before {
+        content: "620px";
+        color: orange;
+    }
+}
+
+@media (min-width: 810px) {
+    .page::before {
+        content: "810px";
+        color: black;
+    }
+}
+
+@media (min-width: 1200px) {
+    .page::before {
+        content: "1200px";
+        color: CornflowerBlue;
+    }
+}
+
+@media (min-width: 1400px) {
+    .page::before {
+        content: "1400px";
+        color: red;
+    }
 }
