Updated pricing table

--- a/public/Lab-Files/Lesson05/Challenges/Team-Challenge-1/css/styles.css
+++ b/public/Lab-Files/Lesson05/Challenges/Team-Challenge-1/css/styles.css
@@ -45,6 +45,10 @@ td:first-child {
     
 }
 
+.background-blue {
+    background-color: #F0F8FF;
+}
+
 .data-red {
     background-color:#E62565;
     color:white;
