--- a/public/resume.css
+++ b/public/resume.css
@@ -1,30 +1,105 @@
-html box-sizing {border-box;}
-h1 {color:#144B6F}
-body {background:#eee;font-family:lato;}
-body h1 {font-family: 'Noto Serif', serif;}
-body h2 {color:#007FA5;}
-body p {color:#4e4f51;}
-body li {color:#4e4f51;}
-body #item1 {color:#848484;}
-body #item2 {color:#848484;}
-.container {padding:50px;width:800px;margin:0 auto;background:white;-webkit-box-shadow: 0px 1px 3px 1px rgba(107,107,107,0.71);
--moz-box-shadow: 0px 1px 3px 1px rgba(107,107,107,0.71);
-box-shadow: 0px 1px 3px 1px rgba(107,107,107,0.71);}
-.heading {text-align:center;padding-top:35px;background:white;}
-.heading h1 {color:black;}
+html box-sizing {
+    border-box;
+}
+
+h1 {
+    color: #144B6F
+}
+
+body {
+    background: #eee;
+    font-family: lato;
+}
+
+body h1 {
+    font-family: 'Noto Serif', serif;
+}
+
+body h2 {
+    color: #007FA5;
+}
+
+body h3 {
+    color: #007FA5;
+}
+body p {
+    color: #4e4f51;
+    font-size:14px;
+}
 
 
-#item1, #item2 {display:inline;}
-#item2 {float:right;}
+body li {
+    color: #4e4f51;
+    font-size:14px;
+}
 
-.objective p {padding-left: 40px;width:740px;font-family: 'Lato', sans-serif;}
-.skills p {padding-left: 40px;width:740px;font-family: 'Lato', sans-serif;}
-.experience {width:740px;}
-.carpe, 
+body #item1 {
+    color: #848484;
+}
+
+body #item2 {
+    color: #848484;
+}
+
+.container {
+    padding: 50px;
+    width: 800px;
+    margin: 0 auto;
+    background: white;
+    -webkit-box-shadow: 0px 1px 3px 1px rgba(107, 107, 107, 0.71);
+    -moz-box-shadow: 0px 1px 3px 1px rgba(107, 107, 107, 0.71);
+    box-shadow: 0px 1px 3px 1px rgba(107, 107, 107, 0.71);
+}
+
+.heading {
+    text-align: center;
+    padding-top: 35px;
+    background: white;
+}
+
+.heading h1 {
+    color: black;
+    font-size:;
+}
+
+#item1,
+#item2 {
+    display: inline;
+}
+
+#item2 {
+    float: right;
+}
+
+.objective p {
+    padding-left: 40px;
+    width: 740px;
+    font-family: 'Lato', sans-serif;
+}
+
+.skills p {
+    padding-left: 40px;
+    width: 740px;
+    font-family: 'Lato', sans-serif;
+}
+
+.experience {
+    width: 740px;
+}
+
+.carpe,
 .sata,
-.officedepot {padding-left:40px;}
+.officedepot {
+    padding-left: 40px;
+}
 
 .education {}
-.education p {padding-left:40px;color:#4e4f51;}
-.education strong {color:#007FA5;}
 
+.education p {
+    padding-left: 40px;
+    color: #4e4f51;
+}
+
+.education strong {
+    color: #007FA5;
+}
