--- a/public/lab-files/Lesson2/Challenges/blog.css
+++ b/public/lab-files/Lesson2/Challenges/blog.css
@@ -1,12 +1,12 @@
 * {
-    font-family: Trebuchet MS;
+    font-family: "Times New Roman";
     font-size: 25px;
     text-align: center;
     color: black;
 }
 
 body {
-    background-color: #68cc5b;
+    background-color: #9cf785;
 }
 
 p {
