--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,15 @@
-a : img {
-      width: 25%;
-      height: 25%;
+.logo {
+    min-width: 100%;
+    min-height: 100%;
+    position: fixed;
+    z-index: 1;
+}
+
+img {
+    height: 175px;
+    width: 175px;
+    padding-left: 50px;
+    padding-top: 30px;
 }
 
 video {
@@ -12,8 +21,6 @@ video {
     min-height: 100%;
     width: auto;
     height: auto;
-    z-index: 1;
-
 }
 
 .Content {
@@ -29,7 +36,9 @@ video {
     background-image: url("linen.jpg");
     background-repeat: repeat;
     color: #35a6fc;
+    border-top: 2px solid #35a6fc;
 }
+
 
 /* unvisited link */
 
@@ -44,7 +53,11 @@ a:link {
 a:visited {
     color: #35a6fc;
 }
+
+
 /* header text */
+
+
 /*.text {
     z-index: 2;
     position: fixed;
@@ -60,6 +73,7 @@ a:visited {
     text-align: justify;
 }
 */
+
 h1 {
     color: #35a6fc;
 }
