--- a/public/index.css
+++ b/public/index.css
@@ -29,9 +29,7 @@ video {
     left: 0%;
     position: absolute;
     background: rgb(245, 245, 245);
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
+    width: 100%;
     height: auto;
     background-image: url("linen.jpg");
     background-repeat: repeat;
