--- a/public/Lab-Files/Lesson4/Challenges/flexbox-flags.css
+++ b/public/Lab-Files/Lesson4/Challenges/flexbox-flags.css
@@ -1,108 +1,100 @@
+/*OVERALL CONTAINERS CSS*/
 
-/*General CSS Adjustments*/
-.flags {
+.content-container {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
-    margin: 0;
 }
 
-.flagname {
-    text-align: center;
+.flagname-container {
+    display: flex;
+    justify-content: center;
     font-size: 20px;
-    margin:5px;
+    margin-top: 5px;
 }
 
-/*ALL OF THE HORIZONTIAL FLAGS CSS*/
-.horizontial-container {
+
+/*FLAG CONTAINERS CSS*/
+
+.flagandflagname-container {
     display: flex;
     flex-flow: column nowrap;
-    width: 250px;
-    height: 175px;
 }
 
-/*German Flag Colors*/
-.german-flag-color1 {
-    background-color: black;
-    width:250px;
-    height:50px;
+.horizontialflag-container {
+    display: flex;
+    flex-flow: column nowrap;
+    width: 200px;
+    height: 150px;
+    border: 1px solid black;
 }
 
-
-.german-flag-color2 {
-    background-color: red;
-    width:250px;
-    height:50px;
-}
-
-
-.german-flag-color3 {
-    background-color: yellow;
-    width:250px;
-    height:50px;
-}
-
-/*Colombia Flag Colors*/
-.colombia-flag-color1 {
-    background-color: yellow;
-    width:250px;
-    height:50px;
-}
-
-.colombia-flag-color2 {
-    background-color: blue;
-    width:250px;
-    height:50px;
-}
-
-.colombia-flag-color3 {
-    background-color: red;
-    width:250px;
-    height:50px;
-}
-
-/*ALL OF THE VERTICAL FLAGS CSS*/
-.vertical-container {
+.verticalflag-container {
     display: flex;
     flex-flow: row nowrap;
-    width: 250px;
-    height: 175px;
+    width: 200px;
+    height: 150px;
+    border: 1px solid black;
 }
+
+
+/*FLAG COLOR CONTAINERS*/
+
+/*German Flag Colors*/
+.german-colors {
+    background-color: black;
+    height: 100%;
+}
+
+.german-colors:nth-child(2) {
+    background-color: red;
+}
+
+.german-colors:last-child {
+    background-color: yellow;
+}
+
 
 /*Italy Flag Colors*/
-.italy-flag-color1 {
-    background-color: green;
-    width:83px;
-    height: 143px;
+.italy-colors {
+    background-color: yellow;
+    width: 100%;
 }
 
-.italy-flag-color2 {
+.italy-colors:nth-child(2) {
     background-color: white;
-    width:83px;
-    height: 143px;
 }
 
-.italy-flag-color3 {
+.italy-colors:last-child {
     background-color: red;
-    width:83px;
-    height: 143px;
 }
+
 
 /*France Flag Color*/
-.france-flag-color1 {
+.france-colors {
     background-color: blue;
-    width:83px;
-    height: 143px;
+    width: 100%;
 }
 
-.france-flag-color2 {
+.france-colors:nth-child(2) {
     background-color: white;
-    width:83px;
-    height: 143px;
 }
 
-.france-flag-color3 {
+.france-colors:last-child {
     background-color: red;
-    width:83px;
-    height: 143px;
+}
+
+
+/*Colombia Flag Colors*/
+.colombia-colors {
+    background-color: yellow;
+    height: 100%;
+}
+
+.colombia-colors:nth-child(2) {
+    background-color: blue;
+}
+
+.colombia-colors:last-child {
+    background-color: red;
 }
