--- a/public/Lab-Files/Lesson2/Assignments/css/style.css
+++ b/public/Lab-Files/Lesson2/Assignments/css/style.css
@@ -18,26 +18,35 @@ a:active{
   text-decoration:none;
 }
 
+/* force correct placement of nav anchors to section as defined in the html*/
 .anchor{
   display: block;
-  height: 115px; /*same height as header*/
-  margin-top: -115px; /*same height as header*/
+  height: 230px; /*same height as header*/
+  margin-top: -230px; /*same height as header*/
   visibility: hidden;
 }
+
+
 
 /*Main */
 
 Body{
 	background-color: #f2f2f2;
+	font-family: 'Titillium Web', sans-serif;
 	
-
 }
+
 
 header{
 	background-color: #D7D6EB;
 		width: 100%; 
+		height: 230px;
 	 overflow: hidden;
 	 position: fixed;
+	 top:0;
+	 left: 0;
+	 z-index: 9999;
+	 
 	 		}
 
 h1{
@@ -62,7 +71,8 @@ font-size:110%;
 .experience{
 color: #282740;
 }	  
-	  
+
+ 
 div{
   color: #000099;
   padding-right: 32px;
@@ -79,6 +89,22 @@ div>ul{
 }
 
 
+nav>ul{
+  display: block; 
+  margin: 0px auto; /* center nav list */
+  
+  }
+
+nav>ul>li{
+  list-style: none;
+  float: left; /* align nav items side by side with block */
+  margin-right: 10px;
+  text-align: center;
+  
+}
+/* end of center nav list */
+
+
 /*footer*/
 footer{
    text-align: center;
@@ -87,3 +113,61 @@ footer{
     padding: 0px 1px 0px 5px;
 
 }
+
+
+
+/*Media*/
+
+/*@media only screen and (min-width: 320px){*/
+  nav {
+    display: none;
+  }
+/*}*/
+
+
+@media only screen and (min-width: 320px){
+
+h1{
+  text-align: center;
+  color: #282740;
+  font-size:250%;
+   
+}
+
+
+nav {
+    display: block;
+  }
+  
+
+nav>ul>li{
+  font-size: 90%;
+  text-align: center;
+  margin-left: 15px;  
+}
+
+
+}
+
+
+
+@media only screen and (min-width: 601px){
+  
+  h1{
+  text-align: center;
+  color: #282740;
+  font-size:300%;
+   
+}
+
+nav>ul>li{
+   font-size: 100%;
+  
+}
+  
+  nav {
+    display: flex;
+  }
+  
+}
+
