--- a/public/lab-files/Lesson5/layout.css
+++ b/public/lab-files/Lesson5/layout.css
@@ -1,24 +1,99 @@
-.HolyGrail {
+/**
+ * Media Queries
+ **/
+
+@media (min-width: 320px) {
+  .page::before {
+    content: "320px";
+    font-family: Arial, sans-serif;
+    color: green;
+    position: fixed;
+    top: 0;
+    left: 0;
+    font-weight: 700;
+    margin: 5px;
+    font-size: 2rem;
+    z-index: 9999;
+  }
+}
+
+@media (min-width: 480px) {
+  .page::before {
+    content: "480px";
+    color: maroon;
+  }
+}
+
+@media (min-width: 620px) {
+  .page::before {
+    content: "620px";
+    color: orange;
+  }
+}
+
+@media (min-width: 810px) {
+  .page::before {
+    content: "810px";
+    color: black;
+  }
+}
+
+@media (min-width: 1200px) {
+  .page::before {
+    content: "1200px";
+    color: CornflowerBlue;
+  }
+}
+
+@media (min-width: 1400px) {
+  .page::before {
+    content: "1400px";
+    color: red;
+  }
+}
+
+.page {
   display: flex;
-  min-height: 100vh;
+  color: white;
+  font-size: 10px;
+  text-align: center;
+  flex-wrap: wrap;
   flex-direction: column;
+  justify-content: space-around;
 }
 
-.HolyGrail-body {
+.header {
   display: flex;
+  background-color: blue;
+  height: 75px;
+  width: auto;
   flex: 1;
+  margin: 10px;
 }
 
-.HolyGrail-content {
+.navigation {
+  display: flex;
+  background-color: red;
+  height: 100px;
+  width: auto;
   flex: 1;
+  margin: 10px;
 }
 
-.HolyGrail-nav, .HolyGrail-ads {
-  /* 12em is the width of the columns */
-  flex: 0 0 12em;
+.featured {
+  display: flex;
+  background-color: orange;
+  height: 300px;
+  width: auto;
+  flex: 1;
+  margin: 10px;
 }
 
-.HolyGrail-nav {
-  /* put the nav on the left */
-  order: -1;
+.story {
+  display: flex;
+  background-color: green;
+  height: 150px;
+  width: auto;
+  flex:1;
+  margin: 10px;
 }
