--- a/public/lab-files/Lesson6/ginger.css
+++ b/public/lab-files/Lesson6/ginger.css
@@ -185,3 +185,14 @@ a {
   flex: 1;
   padding: 0px;
 }
+
+.ginger {
+  text-align: center;
+  color: orange;
+  height: 100px;
+  width: auto;
+}
+
+.littlepic {
+  
+}
